# laravel-cloud-weekly-updater

./: .env.example  .gitignore  README.md  projects.json.example  pyproject.toml  run-due.sh  wu
scripts/: bootstrap.sh  com.websiteupdater.hourly.plist.template  install-cron.sh  install-launchd.sh
tests/: README.md  __init__.py  test_cleanup.py  test_lockfile.py  test_retry.py  test_scheduler.py
websiteupdater/: __init__.py  __main__.py  cleanup.py  cli.py  config.py  db.py  email_report.py  git_ops.py  laravel_cloud.py  lockfile.py  notify.py  reports.py  retry.py  runner.py  scheduler.py  tests_runner.py  visual_diff.py
websiteupdater/updaters/: composer.py  npm.py
